# telegram-bot

./: .env.dist  .gitignore  manage.py  pyproject.toml
scripts/: backup_project.sh  install.sh
src/: app.py  config.py  exceptions.py  loader.py  settings.toml  tasks.py
src/common/: models.py
src/filters/: is_admin.py  is_user_in_db.py
src/handlers/: __init__.py
src/handlers/admins/: __init__.py  backup.py  category_management.py  mailing.py  payments_management.py  shop_info.py  shop_management.py  start.py  statistics.py  support.py  users.py
src/handlers/common/: __init__.py  cancel.py
src/handlers/error/: __init__.py  user_not_in_db.py
src/handlers/users/: __init__.py  balance.py  buy_product.py  profile.py  shop_info.py  start.py  support.py
src/keyboards/buttons/: backup_buttons.py  common_buttons.py  (+14 more)
src/middlewares/: __init__.py  banned_user_middleware.py  setup_middlewares.py
src/repositories/: payments_apis_repository.py
src/responses/: backup.py  balance.py  base.py  category_management.py  mailing.py  main_menu.py  payments.py  payments_management.py  product_management.py  products.py  profile.py  shop_information.py  shop_management.py  start.py  statistics.py  support.py  users.py
src/services/: notifications.py  product_services.py  products.py  time_helpers.py
src/states/: backup_states.py  balance_states.py  category_states.py  mailing_states.py  payments_management_states.py  product_states.py  shop_info_states.py  support_states.py  users_states.py
src/utils/: file_system.py  notify_admins.py  notify_users.py  translation.py
(+50 files in other folders)
