[tool.poetry]
name = "shop_bot"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
coinbase-commerce = "^1.0.1"
aiogram = "^2.22.2"
pydantic = "^1.9.2"
python-dotenv = "^0.21.0"
toml = "^0.10.2"
typing-extensions = "^4.4.0"
SQLAlchemy = "^1.4.41"
APScheduler = "^3.9.1"
tzlocal = "^4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
